# services/api/internal/models/models.go
@@ -54,17 +54,18 @@ type Folder struct {
 }
 
 type File struct {
-	ID          uint      `gorm:"primaryKey" json:"id"`
-	UserID      uint      `gorm:"not null;index" json:"userId"`
-	VolumeID    string    `gorm:"not null;default:'default';index" json:"volumeId"`
-	FolderID    *uint     `gorm:"index" json:"folderId"`
-	Name        string    `gorm:"not null" json:"name"`
-	Size        int64     `gorm:"not null" json:"size"`
-	MimeType    string    `json:"mimeType"`
-	Thumbnail   string    `json:"thumbnail,omitempty"`
-	Fingerprint string    `json:"fingerprint,omitempty"` // Used for resumable uploads
-	CreatedAt   time.Time `json:"createdAt"`
-	UpdatedAt   time.Time `json:"updatedAt"`
+	ID            uint      `gorm:"primaryKey" json:"id"`
+	UserID        uint      `gorm:"not null;index" json:"userId"`
+	VolumeID      string    `gorm:"not null;default:'default';index" json:"volumeId"`
+	FolderID      *uint     `gorm:"index" json:"folderId"`
+	Name          string    `gorm:"not null" json:"name"`
+	Size          int64     `gorm:"not null" json:"size"`
+	MimeType      string    `json:"mimeType"`
+	Thumbnail     string    `json:"thumbnail,omitempty"`
+	Fingerprint   string    `json:"fingerprint,omitempty"` // Used for resumable uploads
+	MediaMetadata string    `gorm:"type:text" json:"mediaMetadata,omitempty"`
+	CreatedAt     time.Time `json:"createdAt"`
+	UpdatedAt     time.Time `json:"updatedAt"`
 
 	Versions []FileVersion `gorm:"foreignKey:FileID" json:"versions,omitempty"`
 }
